# mjpg-streamer-humandetector

./: INRIA_DPM_person_final.txt  start-up-commond.md
mjpg-streamer-experimental/plugins/input_opencv/: CMakeLists.txt  input_opencv.cpp  input_opencv.h  v4l_test.cpp
mjpg-streamer-experimental/plugins/input_opencv/dpm/: FastDPM.cpp  FastDPM.h  PM_type.h  config.h  config.txt
mjpg-streamer-experimental/plugins/input_opencv/dpm/auxiliary/: getCurrentTime.cpp
mjpg-streamer-experimental/plugins/input_opencv/dpm/funs/: config.cpp  draw_img.cpp  fconv.cpp  featpyramid.cpp  load_model.cpp  predict_box.cpp
mjpg-streamer-experimental/plugins/input_opencv/fff/: fff.cpp  fff.h
mjpg-streamer-experimental/plugins/input_opencv/filters/cvfilter_cpp/: filter_cpp.cpp  fun.h
mjpg-streamer-experimental/plugins/input_uvc/: input_uvc.c
